src/objects/Archive_Event_Journal__c.object
<CustomObject>
    <description>It is user to store Event Journal records of a &apos;LR project overview&apos; record where LR Project overview record status=completed or cancelled.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Archive_Event_Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Initial_Search_Started__c</fullName>
        <label>Date Initial Search Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Journal_Search_was_Performed__c</fullName>
        <label>Date Last Journal Search was Performed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Next_Journal_Search_is_Due__c</fullName>
        <label>Date Next Journal Search is Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Journal_Review_due_date__c</fullName>
        <label>Event Journal Review due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Journal__c</fullName>
        <label>Frequency of Journal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bi-Annual (Twice a year)</fullName>
                </value>
                <value>
                    <fullName>Bi-Monthly (Every two months)</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly (Every two weeks)</fullName>
                </value>
                <value>
                    <fullName>Every 9 Months</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Yearly (Annual)</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IQVIAPSA-5449</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_since__c</fullName>
        <label>Inactive since?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Clone_Record__c</fullName>
        <label>Is Clone Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Name__c</fullName>
        <label>Journal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journals_Main_Catalogue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journals Main Catalogue</label>
        <referenceTo>Journals_Main_Catalogue__c</referenceTo>
        <relationshipName>Archive_Event_Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LR_Project_Overview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LR Project Overview</label>
        <referenceTo>LR_Project_Overview__c</referenceTo>
        <relationshipLabel>Event Journals</relationshipLabel>
        <relationshipName>Archive_Event_Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LR_Type__c</fullName>
        <label>LR Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EV MLM</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>SLR</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Frequency_of_Journal_Details__c</fullName>
        <label>Old Frequency of Journal Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Journal_Frequency_Specify__c</fullName>
        <label>Other Journal Frequency (Specify)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper_Journal__c</fullName>
        <label>Paper Journal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Periodicity__c</fullName>
        <label>Periodicity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Drug__c</referenceTo>
        <relationshipName>Archive_Event_Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <label>Project Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipName>Archive_Event_Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPPV_LPS_Comments__c</fullName>
        <label>QPPV/LPS Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regulatory_Requirement__c</fullName>
        <label>Regulatory Requirement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Dates__c</fullName>
        <label>Review Dates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area__c</fullName>
        <label>Therapeutic Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Archive Event Journal</label>
    <nameField>
        <label>Unique ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archive Event Journals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AEJ_PSA_VR01_Cannot_Edit_MJC_Fields</fullName>
        <active>true</active>
        <description>IQVIAPSA-4655</description>
        <errorConditionFormula>AND(
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
OR(
PRIORVALUE( Name ) != Name
))</errorConditionFormula>
        <errorMessage>You Can Not Update Unique Id</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AEJ_PSA_VR03_DateLastJournalSearch</fullName>
        <active>true</active>
        <description>IQVIAPSA-4655</description>
        <errorConditionFormula>AND( Date_Last_Journal_Search_was_Performed__c &gt; TODAY(), $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c = False)</errorConditionFormula>
        <errorMessage>Date Last Journal Search was Performed&apos; cannot be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AEJ_PSA_VR04_inactiveSinceFuture</fullName>
        <active>true</active>
        <description>IQVIAPSA-4655</description>
        <errorConditionFormula>AND($Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c = False,AND(  ISPICKVAL( Active__c , &apos;No&apos;),Inactive_since__c &gt; TODAY()),!ISNEW() )</errorConditionFormula>
        <errorDisplayField>Inactive_since__c</errorDisplayField>
        <errorMessage>Inactive since? cannot be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AEJ_PSA_VR05_NoInActive</fullName>
        <active>true</active>
        <description>IQVIAPSA-4655</description>
        <errorConditionFormula>AND( $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c = False,ISPICKVAL( Active__c ,&quot;No&quot;),ISNULL( Inactive_since__c),!ISNEW())</errorConditionFormula>
        <errorDisplayField>Inactive_since__c</errorDisplayField>
        <errorMessage>Inactive Since? cannot be empty, as No has been selected from the &apos;Active?&apos; field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AEJ_PSA_VR06_validationOnOther</fullName>
        <active>true</active>
        <description>IQVIAPSA-4655</description>
        <errorConditionFormula>AND( ISPICKVAL( Frequency_of_Journal__c , &apos;Other&apos;) , ISBLANK( Other_Journal_Frequency_Specify__c ), $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c = False, !ISNEW())</errorConditionFormula>
        <errorDisplayField>Other_Journal_Frequency_Specify__c</errorDisplayField>
        <errorMessage>&apos;Other Journal Frequency (Specify)&apos; cannot be empty, as &apos;Other&apos; has been selected from the &apos;Frequency of Journal&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AEJ_PSA_VR07_yesInActive</fullName>
        <active>true</active>
        <description>IQVIAPSA-4655</description>
        <errorConditionFormula>AND( $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c = False,AND(ISPICKVAL( Active__c ,&apos;Yes&apos;),!ISBLANK( Inactive_since__c )),!ISNEW() )</errorConditionFormula>
        <errorDisplayField>Inactive_since__c</errorDisplayField>
        <errorMessage>You have selected &apos;Yes&apos; in the &apos;Active?&apos; field, you cannot enter a value in the &apos;Inactive Since&apos; field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AEJ_PSA_VR08_CheckDataFromLR</fullName>
        <active>true</active>
        <description>IQVIAPSA-4655</description>
        <errorConditionFormula>AND(
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == False, ISNEW(), 
OR(
ISBLANK(Account__c),
ISBLANK(Product__c),
ISBLANK(Project__c),
ISPICKVAL(LR_Type__c, &apos;&apos;)
)
)</errorConditionFormula>
        <errorMessage>You cannot create a new Event Journal record because Project, Account, Product and LR Type is blank on the LR project overview record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AEJ_PSA_VR09_Cannot_Blank_MJC_Fields</fullName>
        <active>true</active>
        <description>EJ_PSA_VR09_Cannot_Blank_MJC_Fields</description>
        <errorConditionFormula>AND(
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
OR(
ISBLANK( URL__c ),
ISBLANK( Therapeutic_Area__c ),
ISBLANK( Subscription__c ),
ISBLANK( Regulatory_Requirement__c ),
ISBLANK( Periodicity__c ),
ISBLANK( Paper_Journal__c ),
ISPICKVAL(Country__c , &apos;&apos;),
ISBLANK( Journal_Name__c ),
ISBLANK( Name )
)
)</errorConditionFormula>
        <errorMessage>You cannot Blank &quot;Unique ID, Country, Journal Name, URL, Periodicity, Paper Journal, Regulatory requirement, Subscription, Therapeutic Area &quot; fields.</errorMessage>
    </validationRules>
</CustomObject>